multiple styling changes + bugfixes
fixed quarantine bug. fixed off-screen nodes / zoom issue. added
restructuring of the svg graphic based on window size. Epic!

--- a/app/assets/stylesheets/tutorial.css.scss
+++ b/app/assets/stylesheets/tutorial.css.scss
@@ -165,19 +165,22 @@
   fill: #ffffff;
 }
 
+.lessonText {
+  position: relative;
+  float: left;
+}
 
 .menuBox {
+  position:relative;
   background: #85bc99;
   float:right;
   color: "white";
   width:700px;
-  overflow: hidden;
   height: 45px;
-  position:relative;
+  top: -75px;
   padding-top: 30px;
   padding-left: 12px;
   text-align: center;
-  top:105px;
   right:-1000px;
   visibility: hidden;
   box-shadow:5px 7px #838383;
@@ -188,6 +191,7 @@
 }
 
 .vaxLogoDiv {
+  position:relative;
   background: #85bc99;
   font-family: "Nunito";
   font-weight: 400;
@@ -195,26 +199,21 @@
   color: white;
   width:125px;
   height: 45px;
-  position:relative;
   padding-top: 30px;
   padding-left: 12px;
   text-align: center;
   visibility: hidden;
-  top:180px;
+  top: 0px;
   left:-200px;
   box-shadow:5px 7px #838383;
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
-  overflow: hidden;
 }
 
 .guideTextSVG {
-  position: absolute;
-  top: 400px;
-  width: auto;
-  height: 175px;
+  position: relative;
   background: #f1f1f1; /* Old browsers */
   background: -moz-linear-gradient(top, #f1f1f1 3%, #ffffff 13%, #ffffff 89%, #f1f1f1 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(3%,#f1f1f1), color-stop(13%,#ffffff), color-stop(89%,#ffffff), color-stop(100%,#f1f1f1)); /* Chrome,Safari4+ */
